--- a/test-app/src/App.css
+++ b/test-app/src/App.css
@@ -28,11 +28,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes App-greeter-size {
+  0% {
+    transform:scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform:scale(1.5);
+  }
+  100% {
+    transform:scale(1);
   }
 }
